while/tests/valid/Cast_Valid_1.while
real f(int i) {
    return (real) i;
}

void main() {
  print f(1);
}
    
