while/tests/invalid-parsing/Parsing_Invalid_17.while
int f() {
     return 1;
}

int g() {
    return f(1);
}